@@ -1,7 +1,8 @@
 Mon Aug 26 16:51:01 2013 Till Kamppeter <till DOT kamppeter AT gmail DOT com>
 
 	* Added new printer:
-		- Samsung ML-2160 (SF patch #19)
+		- Samsung ML-2160 (SF patch #20)
+		- Samsung ML-2165 (SF patch #15)
 	* Added "drv" target to the top level Makefile (SF patch #18).
 	* Renamed the ppd/*.drv files to ppd/*.drv.in to fix the build process
 	  (SF patch #17).
